# osm-polygon-to-wikipedia-articles

./: .gitignore  MODULES.md  README.md  pyproject.toml
docs/: andorra_wikidata_matches.md  wikidata_matches.md
logs/: .gitignore
logs/runs/: run_moldova.out
scripts/: add_thumbnail_column_and_push.py  dedupe_per_country.py  enrich_with_input_columns.py  match_wikidata.py  process_countries.py  push_union_to_hf.py  render_map_png.py  rerun_country_batched.py  run_all.sh  run_big4.sh  run_country_background.sh  run_one.sh  sample.py  tiny_countries.txt  union_matches.py  visualize_parquet.py
scripts/dataset/: audit_countries.py  finish_and_push_country.py  run_batch.py
scripts/per_country/: match_wikidata.py  rerun_country_batched.py  sample.py
scripts/shell/: run_all.sh  run_big4.sh  run_country_background.sh  run_one.sh
src/osm_polygon_to_wikipedia_articles/: __init__.py  load.py  sample.py
tests/: test_batched_sitelinks.py  test_concurrent_match.py  test_delete_hf_duplicates.py  test_delete_legacy_files.py  test_full_dataset_layout.py  test_geomap.py  test_load.py  test_map.py  test_match.py  test_match_extended.py  test_process_countries.py  test_retry.py  test_sample.py  test_shared_helpers.py  test_summary_extract.py  test_thumbnail_columns.py  test_union.py  test_wikidata.py
tests/fetch/: test_adaptive_fetcher.py  test_batched_sitelinks.py  test_parallel_resilient_sitelinks.py  test_pooled_http_client.py  test_pooled_http_client_http2.py  test_pooled_http_client_raises.py  test_rate_limiter.py  test_resilient_sitelinks.py  test_sitelinks_checkpoint.py  test_sitelinks_checkpoint_skip_missing.py  test_title_cache.py
tests/fixtures/: liechtenstein.parquet
tests/layout/: test_init_helpers.py  test_init_no_double_listing.py  test_readme_helpers.py  test_shared_helpers.py  test_subpackage_layout.py
tests/orchestration/: test_copy_outputs.py  test_process_countries.py  test_process_countries_module.py
(+67 files in other folders)
