[project]
name = "osm-polygon-to-wikipedia-articles"
version = "0.1.0"
description = "Takes OSM polygons as input and retrieves Wikipedia articles related to them."
authors = [
    { name = "NoeFlandre", email = "noeflandre@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osm_polygon_to_wikipedia_articles"]