[project]
name = "osm-polygon-to-wikipedia-articles"
version = "0.1.0"
description = "Takes OSM polygons as input and retrieves Wikipedia articles related to them."
authors = [
    { name = "NoeFlandre", email = "noeflandre@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "datasets>=5.0.0",
    "folium>=0.20.0",
    "httpx[http2]>=0.28.0",
    "polars>=1.42.0",
    "pyarrow>=24.0.0",
    "shapely>=2.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osm_polygon_to_wikipedia_articles"]

[dependency-groups]
dev = [
    "playwright>=1.61.0",
    "pytest>=9.1.1",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
